start swap func

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <h1>Navbar template</h1>
+        <h1>Notepad</h1>
         <button onclick="addNote()">+</button>
     </nav>
 
@@ -18,45 +18,7 @@
     <section>  
         <ul id="note-card-container">
         </ul>
-        
-        <!-- <div class="note-card"></div> -->
-        <!-- <div class="note-card">
-            <h1>Reminder</h1>
-            <p>I need to pick up Jung from soccer @ 5:00 PM.</p>
-            <div class="note-menu">
-                <button>Edit</button>
-                <button>Delete</button>
-            </div>
-        </div> -->
-        <!-- <div class="note-card">
-            <h1>Groceries</h1>
-            <ul>
-                <li>Spaghetti</li>
-                <li>Marinara Sauce</li>
-                <li>Meatballs</li>
-                <li>Cheese</li>
-                <li>Olive Oil</li>
-                <li>Salt</li>
-                <li>Pepper</li>
-            </ul>
-            <div class="note-menu">
-                <button>Edit</button>
-                <button>Delete</button>
-            </div>
-        </div> -->
-        <!-- <div class="note-card">
-            <h1>Holidays</h1>
-            <ol>
-                <li>New Years</li>
-                <li>Valentines Day</li>
-                <li>St. Patrick's Day</li>
-                <li>etc.</li>
-            </ol>
-            <div class="note-menu">
-                <button>Edit</button>
-                <button>Delete</button>
-            </div>
-        </div> -->
+        <button onclick="swap()">swap13</button>
     </section>
 
     <script src="index.js"></script>
