--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 
     <!-- array of note cards being displayed...currently just 3 note card place holders -->
     <section>  
-        <ul id="note-card-container">
-        </ul>
-        <button onclick="swap()">swap13</button>
+        <ol id="note-card-container">
+        </ol>
     </section>
 
     <script src="index.js"></script>
